// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Somu list component should include hideSidebar query param on primary and item links 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="somu_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="somu_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <label
              class="govuk-label"
            >
              test
            </label>
          </td>
          <td
            class="govuk-table__cell"
          >
            <a
              class="govuk-link"
              href="/case/1234/stage/5678/somu/test/testType/tesCaseType/item/test/remove?hideSidebar=true"
            >
              Remove
            </a>
          </td>
        </tr>
      </tbody>
    </table>
    <p>
      <a
        class="govuk-body govuk-link"
        href="/case/1234/stage/5678/somu/test/testType/tesCaseType/add?hideSidebar=true"
      >
        Add
      </a>
    </p>
  </fieldset>
</div>
`;

exports[`Somu list component should render ApprovalTypeTable with 1 Complete - approved, 1 Cancelled, 1 Complete - rejected 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="somu_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="somu_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <label
              aria-label="Cancelled approval request: Test Team 2"
              class="govuk-label"
              title="Cancelled approval request: Test Team 2"
            >
              Test Team 2
            </label>
          </td>
          <td
            class="govuk-table__cell "
          >
            <label
              aria-label="Cancelled"
              class="govuk-label"
              title="Cancelled"
            >
              Cancelled
            </label>
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <label
              aria-label="Test Team 3"
              class="govuk-label"
              title="Test Team 3"
            >
              Test Team 3
            </label>
          </td>
          <td
            class="govuk-table__cell "
          >
            <label
              aria-label="Complete - approved"
              class="govuk-label"
              title="Complete - approved"
            >
              Complete - approved
            </label>
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <label
              aria-label="Test Team 4"
              class="govuk-label"
              title="Test Team 4"
            >
              Test Team 4
            </label>
          </td>
          <td
            class="govuk-table__cell "
          >
            <label
              aria-label="Complete - rejected"
              class="govuk-label"
              title="Complete - rejected"
            >
              Complete - rejected
            </label>
          </td>
        </tr>
      </tbody>
    </table>
  </fieldset>
</div>
`;

exports[`Somu list component should render ApprovalTypeTable with Due 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="somu_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="somu_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <label
              aria-label="Test Team"
              class="govuk-label"
              title="Test Team"
            >
              Test Team
            </label>
          </td>
          <td
            class="govuk-table__cell date-warning"
          >
            <label
              aria-label="Overdue 01/09/2021"
              class="govuk-label"
              title="Overdue 01/09/2021"
            >
              Overdue 01/09/2021
            </label>
          </td>
        </tr>
      </tbody>
    </table>
  </fieldset>
</div>
`;

exports[`Somu list component should render status column correctly 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="somu_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="somu_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <label
              aria-label="Cancelled contribution request: TestBusinessArea - TestTeam"
              class="govuk-label"
              title="Cancelled contribution request: TestBusinessArea - TestTeam"
            >
              TestBusinessArea - TestTeam
            </label>
          </td>
          <td
            class="govuk-table__cell "
          >
            <label
              aria-label="Cancelled"
              class="govuk-label"
              title="Cancelled"
            >
              Cancelled
            </label>
          </td>
          <td
            class="govuk-table__cell"
          >
            <a
              class="govuk-link"
              href="/case/1234/stage/5678/somu/test/testType/tesCaseType/item/test/remove?hideSidebar=true"
            >
              Remove
            </a>
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <label
              aria-label="TestBusinessArea - TestTeam"
              class="govuk-label"
              title="TestBusinessArea - TestTeam"
            >
              TestBusinessArea - TestTeam
            </label>
          </td>
          <td
            class="govuk-table__cell "
          >
            <label
              aria-label="Complete"
              class="govuk-label"
              title="Complete"
            >
              Complete
            </label>
          </td>
          <td
            class="govuk-table__cell"
          >
            <a
              class="govuk-link"
              href="/case/1234/stage/5678/somu/test/testType/tesCaseType/item/test/remove?hideSidebar=true"
            >
              Remove
            </a>
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <label
              aria-label="TestBusinessArea - TestTeam"
              class="govuk-label"
              title="TestBusinessArea - TestTeam"
            >
              TestBusinessArea - TestTeam
            </label>
          </td>
          <td
            class="govuk-table__cell date-warning"
          >
            <label
              aria-label="Overdue 01/01/2020"
              class="govuk-label"
              title="Overdue 01/01/2020"
            >
              Overdue 01/01/2020
            </label>
          </td>
          <td
            class="govuk-table__cell"
          >
            <a
              class="govuk-link"
              href="/case/1234/stage/5678/somu/test/testType/tesCaseType/item/test/remove?hideSidebar=true"
            >
              Remove
            </a>
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <label
              aria-label="TestBusinessArea - TestTeam"
              class="govuk-label"
              title="TestBusinessArea - TestTeam"
            >
              TestBusinessArea - TestTeam
            </label>
          </td>
          <td
            class="govuk-table__cell "
          >
            <label
              aria-label="Due 01/01/2050"
              class="govuk-label"
              title="Due 01/01/2050"
            >
              Due 01/01/2050
            </label>
          </td>
          <td
            class="govuk-table__cell"
          >
            <a
              class="govuk-link"
              href="/case/1234/stage/5678/somu/test/testType/tesCaseType/item/test/remove?hideSidebar=true"
            >
              Remove
            </a>
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <label
              aria-label="TestBusinessArea - TestTeam"
              class="govuk-label"
              title="TestBusinessArea - TestTeam"
            >
              TestBusinessArea - TestTeam
            </label>
          </td>
          <td
            class="govuk-table__cell "
          >
            <label
              aria-label="Due null"
              class="govuk-label"
              title="Due null"
            >
              Due null
            </label>
          </td>
          <td
            class="govuk-table__cell"
          >
            <a
              class="govuk-link"
              href="/case/1234/stage/5678/somu/test/testType/tesCaseType/item/test/remove?hideSidebar=true"
            >
              Remove
            </a>
          </td>
        </tr>
      </tbody>
    </table>
    <p>
      <a
        class="govuk-body govuk-link"
        href="/case/1234/stage/5678/somu/test/testType/tesCaseType/add?hideSidebar=true"
      >
        Add
      </a>
    </p>
  </fieldset>
</div>
`;

exports[`Somu list component should render when CompTable renderer added 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="somu_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="somu_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <label
              aria-label="TestBusinessArea"
              class="govuk-label"
              title="TestBusinessArea"
            >
              TestBusinessArea
            </label>
          </td>
          <td
            class="govuk-table__cell "
          >
            <label
              aria-label="Due null"
              class="govuk-label"
              title="Due null"
            >
              Due null
            </label>
          </td>
        </tr>
      </tbody>
    </table>
  </fieldset>
</div>
`;

exports[`Somu list component should render with MpamTable renderer 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="somu_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="somu_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <label
              aria-label="TestBusinessArea - TestTeam"
              class="govuk-label"
              title="TestBusinessArea - TestTeam"
            >
              TestBusinessArea - TestTeam
            </label>
          </td>
          <td
            class="govuk-table__cell "
          >
            <label
              aria-label="Due null"
              class="govuk-label"
              title="Due null"
            >
              Due null
            </label>
          </td>
        </tr>
      </tbody>
    </table>
  </fieldset>
</div>
`;

exports[`Somu list component should render with add link when passed in props 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="somu_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="somu_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      />
    </table>
    <p>
      <a
        class="govuk-body govuk-link"
        href="/case/1234/stage/5678/somu/test/testType/tesCaseType/add?hideSidebar=false"
      >
        Add
      </a>
    </p>
  </fieldset>
</div>
`;

exports[`Somu list component should render with additional when passed in props 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset my-css-class"
    id="somu_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="somu_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      />
    </table>
  </fieldset>
</div>
`;

exports[`Somu list component should render with choices when table renderer exists 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="somu_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="somu_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <label
              aria-label="TestBusinessArea - Test Team"
              class="govuk-label"
              title="TestBusinessArea - Test Team"
            >
              TestBusinessArea - Test Team
            </label>
          </td>
          <td
            class="govuk-table__cell "
          >
            <label
              aria-label="Due null"
              class="govuk-label"
              title="Due null"
            >
              Due null
            </label>
          </td>
        </tr>
      </tbody>
    </table>
  </fieldset>
</div>
`;

exports[`Somu list component should render with default props 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="somu_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="somu_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      />
    </table>
  </fieldset>
</div>
`;

exports[`Somu list component should render with default render when empty renderer added 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="somu_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="somu_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <label
              class="govuk-label"
            >
              test
            </label>
          </td>
        </tr>
      </tbody>
    </table>
  </fieldset>
</div>
`;

exports[`Somu list component should render with default render when renderers object doesn't exist 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="somu_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="somu_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <label
              class="govuk-label"
            >
              test
            </label>
          </td>
        </tr>
      </tbody>
    </table>
  </fieldset>
</div>
`;

exports[`Somu list component should render with error when passed in props 1`] = `
<div
  class="govuk-form-group govuk-form-group--error"
>
  <fieldset
    class="govuk-fieldset "
    id="somu_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="somu_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <span
      class="govuk-error-message"
      id="somu_list-error"
    >
      Validation has failed
    </span>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      />
    </table>
  </fieldset>
</div>
`;

exports[`Somu list component should render with item link passed in props 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="somu_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="somu_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <label
              class="govuk-label"
            >
              test
            </label>
          </td>
          <td
            class="govuk-table__cell"
          >
            <a
              class="govuk-link"
              href="/case/1234/stage/5678/somu/test/testType/tesCaseType/item/test/remove?hideSidebar=false"
            >
              Remove
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </fieldset>
</div>
`;

exports[`Somu list component should render with label when passed in props 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="somu_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="somu_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      >
        Test somu list
      </span>
    </legend>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      />
    </table>
  </fieldset>
</div>
`;
